2002-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>
	From Mats Lidell <matsl@contactor.se>.

	* gnus-art.el (gnus-article-mode-syntax-table): Replace "-" to " ".

2002-09-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* gnus-sum.el (gnus-nov-parse-line): When an error is signaled in
	the part to decode encoded words, use raw words instead of decoded
	words.

2002-09-26  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnimap.el (nnimap-update-unseen): Use gnus-gethash-safe.

	* mm-view.el (mm-w3m-mode-ignored-keys): New variable.
	(mm-setup-w3m): Use it.

2002-09-27  Simon Josefsson  <jas@extundo.com>

	* gnus-art.el (gnus-article-mode-syntax-table): Make M-. work in
	article buffers.

	* nnimap.el (nnimap-fixup-unread-after-getting-new-news): Autoload
	it just in case.
	(nnimap-update-unseen): New function; update unseen count in
	`n-m-info'.
	(nnimap-close-group): Call it.

	* gnus-start.el (gnus-setup-news-hook): Add n-f-u-a-g-n-n.
	(gnus-after-getting-new-news-hook): Ditto.

	* nnimap.el (nnimap-retrieve-groups): Move the quick mail check
	message into verboselevel 9.  Change slow mail check message.
	(nnimap-retrieve-groups): Use prefixed names in n-mailbox-info.
	(nnimap-fixup-unread-after-getting-new-news): New function, to be
	used as a hook after getting new mail.

2002-09-26  Simon Josefsson  <jas@extundo.com>

	* imap.el (imap-parse-resp-text-code): The UNSEEN value in
	SELECT/EXAMINE is first unseen article, not number of unseen
	articles.  Make them distinct by renaming the former to
	`first-unseen' instead of `unseen'.

	* nnimap.el (nnimap-retrieve-groups): Get uidvalidity and unseen
	too.
	(nnimap-retrieve-groups): Don't used cached data if uidvalidity
	changed.
	(nnimap-retrieve-groups): Store uidvalidity and unseen data too.

	* gnus-int.el (gnus-server-unopen-status): Defcustom.

	* mml-sec.el (mml-signencrypt-style): Docstring to font-lock
	better.

	* mml2015.el (mml2015-pgg-decrypt): Only add security information