@@ -1,3 +1,11 @@
+2002-09-27  Simon Josefsson  <jas@extundo.com>
+
+	* gnus-start.el (gnus-fixup-nnimap-unread-after-getting-new-news): New.
+	(gnus-setup-news-hook): Use it.
+	(gnus-after-getting-new-news-hook): Ditto.
+
+	* nnimap.el (nnimap-fixup-unread-after-getting-new-news): Remove.
+
 2002-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>
 	From Mats Lidell <matsl@contactor.se>.
 
